fixes time and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ p {
 
 .choices {
     color: white;
-    margin-top: 30px;
+    margin-top: 10px;
     font-size: 25px;
     text-shadow: 0px 3px 0px #242525, 0px 14px 10px rgba(0, 0, 0, 0.15), 0px 24px 2px rgba(0, 0, 0, 0.1), 0px 34px 30px rgba(0, 0, 0, 0.1);
 }
@@ -77,8 +77,9 @@ p {
 /*************** Timer ********/
 
 #time {
-    margin-right: 50px;
+    margin-right: 200px;
     font-size: 70px;
+    margin-top: 85px;
 }
 
 /***** Button *******/
@@ -120,6 +121,8 @@ p {
     transition: 0.5s;
     background-color: rgba(204, 243, 177, 0.938);
 }
+
+
 
 .btns:hover {
     padding-right: 60px;
@@ -244,3 +247,5 @@ a:hover {
         -webkit-font-smoothing: antialiased;
     }
 }
+
+/************* Mouse Trail   *****(*****88*******)******/
